--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -2,7 +2,7 @@ name: main_workflow.yml
 
 on: [push]
 jobs:
-  runs-on: ubuntu-latest
+  runs-on: windows-latest
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
