--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -8,7 +8,7 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@v3
         - name: Super-linter
-          uses: github/super-linter@v3.3.0
+          uses: github/super-linter@latest
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             DEFAULT_BRANCH: nodejs_example
