--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -10,10 +10,10 @@ jobs:
         - name: Super-linter
           uses: github/super-linter@latest
           env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            LINTER_RULES_PATH: ${{ github.workspace }}
+            VALIDATE_ALL_CODEBASE: true
             DEFAULT_BRANCH: main
-            LINTER_RULES_PATH: /
             JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
             VALIDATE_JAVASCRIPT_ES: true
-
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
    
