--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -3,7 +3,7 @@ name: main_workflow.yml
 on: [push]
 jobs:
   prueba:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
         - name: Checkout code
           uses: actions/checkout@v3
