--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -11,7 +11,7 @@ jobs:
           uses: github/super-linter@latest
           env:
            DEFAULT_BRANCH: main
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           GITHUB_TOKEN: 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
            
            LINTER_RULES_PATH: /
            JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
