--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -1,27 +1,23 @@
-name: main_workflow.yml
+name: main_workflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - nodejs_linter_job
+
 jobs:
-  prueba:
+  linter-execution:
     runs-on: ubuntu-latest
+
     steps:
-        - name: Checkout code
-          uses: actions/checkout@v3
-          with:
-            fetch-depth: 0
-        - name: Super-linter
-          uses: github/super-linter@latest
-          env:
-           DEFAULT_BRANCH: main
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-           
-           LINTER_RULES_PATH: /
-           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
-           VALIDATE_JAVASCRIPT_ES: true
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-
-
-
-
- 
-
+    - name: Linter execution
+      uses: github/super-linter@v3
+      env:
+        DEFAULT_BRANCH: nodejs_example
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        LINTER_RULES_PATH: /
+        JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
+        VALIDATE_JAVASCRIPT_ES: true
