--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
-  "extends": "standard",
-  "rules": {
-    "semi": [2, "always"],
-    "quotes": ["error", "double"]
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "rules": {}
 }
-
-
