--- a/.github/workflows/enviroment.yml
+++ b/.github/workflows/enviroment.yml
@@ -32,3 +32,13 @@ jobs:
       run: |
         npm install jest
         npm test
+  deploy-execution:
+    runs-on: ubuntu-latest
+    needs: test-execution
+    env:
+      DESTINATION_PERSON: 2DAW
+    steps:
+    - name: Deploy
+      uses: adeloyedeji/github-actions-hello@v1.0
+      with:
+        who-to-greet: ${{ env.DESTINATION_PERSON }}
