--- a/.github/workflows/enviroment.yml
+++ b/.github/workflows/enviroment.yml
@@ -16,7 +16,7 @@ jobs:
       uses: github/super-linter@v4
       env:
         DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.secreto }}
         LINTER_RULES_PATH: /
         JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
         VALIDATE_JAVASCRIPT_ES: true
