--- a/.github/workflows/exampleSurge.yml
+++ b/.github/workflows/exampleSurge.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Deploy to surge.sh
       uses: dswistowski/surge-sh-action@v1
       env:
+        SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
         SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
     needs: build
 
