--- a/.github/workflows/exampleSurge.yml
+++ b/.github/workflows/exampleSurge.yml
@@ -33,8 +33,6 @@ jobs:
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
-        with:
-          project: .
-
+    needs: build
 
 
