--- a/.github/workflows/memeWorkflow.yml
+++ b/.github/workflows/memeWorkflow.yml
@@ -1,8 +1,8 @@
-name: My Workflow
+name: Modify Readme Workflow
 on: [push]
 
 jobs:
-  build:
+  run_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -10,18 +10,26 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: npm test
+        run: |
+          npm install
+          npm test
 
-      - name: Add meme to README
+  modify_readme:
+    needs: run_tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Modify Readme
         uses: ./
         with:
-          positive_phrase: "Los tests han funcionado y lo sabes"
-          negative_phrase: "Los tests han fallado y lo sabes"
-          result_tests: ${{ job.status }}
+          positive_phrase: 'Los tests han funcionado y lo sabes'
+          negative_phrase: 'Los tests no han funcionado y lo sabes'
+          result_tests: ${{ needs.run_tests.outputs.result }}
       - name: Commit and push
-        run: |
-          git config --local user.email "soro_24@hotmail.com"
-          git config --local user.name "Lordsoro"
-          git add README.md
-          git commit -m "Add meme to README"
-          git push
+        uses: actions/git-commit-and-push@v2
+        with:
+          push: true
+          commit_message: 'Modificado readme'
