--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Linter execution
       uses: github/super-linter@v4
       env:
-        DEFAULT_BRANCH: main
+        DEFAULT_BRANCH: node_jest
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         LINTER_RULES_PATH: /
         JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
