--- a/.github/workflows/enviroment.yml
+++ b/.github/workflows/enviroment.yml
@@ -9,36 +9,47 @@ jobs:
   linter-execution:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Linter execution
-      uses: github/super-linter@v4
-      env:
-        DEFAULT_BRANCH: main
-        GITHUB_TOKEN: ${{ secrets.secreto }}
-        LINTER_RULES_PATH: /
-        JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
-        VALIDATE_JAVASCRIPT_ES: true
-        
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+
+      - name: Linter execution
+        uses: github/super-linter@v4
+        env:
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.secreto }}
+          LINTER_RULES_PATH: /
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
+          VALIDATE_JAVASCRIPT_ES: true
+
   test-execution:
     runs-on: ubuntu-latest
     needs: linter-execution
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Run jest tests
-      run: |
-        npm install jest
-        npm test
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+
+      - name: Run jest tests
+        run: |
+          npm install jest
+          npm test
+
   deploy-execution:
     runs-on: ubuntu-latest
     needs: test-execution
     env:
       DESTINATION_PERSON: 2DAW
     steps:
-    - name: Deploy
-      uses: adeloyedeji/github-actions-hello@v1.0
-      with:
-        who-to-greet: ${{ env.DESTINATION_PERSON }}
+      - name: Deploy
+        uses: adeloyedeji/github-actions-hello@v1.0
+        with:
+          who-to-greet: ${{ env.DESTINATION_PERSON }}
